--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
               <div class="portfolio-content h-100">
                 <img src="assets/img/mobileapps/parkingspot/parking.png" class="img-fluid" alt="Parking Spot App" loading="lazy">
                 <div class="portfolio-info">
-                  <h4>Parking Spot Mobile App</h4>
-                  <p>Flutter app for finding & creating private parking spaces</p>
+                  <h4>Parking Spot App</h4>
+                  <p>Full-stack: Flutter (iOS/Android), Angular Dashboard, Java Spring Boot</p>
                   <a href="assets/img/mobileapps/parkingspot/parking.png" title="Parking Spot App" data-gallery="portfolio-gallery-parkingspot" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://github.com/Insterstellar/ParkingSpotApp/tree/main" title="GitHub Repository" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html?project=parking" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -298,9 +298,10 @@
                 <img src="assets/img/mobileapps/wifiranger/newimage.png" class="img-fluid" alt="WiFi Ranger Application" loading="lazy">
                 <div class="portfolio-info">
                   <h4>WiFi Distance Catcher</h4>
-                  <p>Android tool for measuring distance to WiFi sources</p>
-                  <a href="assets/img/mobileapps/wifiranger/newimage.png" title="WiFi Ranger" data-gallery="portfolio-gallery-wifiranger" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://groups.google.com/g/wifiranger" title="WiFi Ranger App" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                  <p>Cross-platform: Flutter & Java for iOS/Android WiFi analysis</p>
+                  <a href="assets/img/mobileapps/wifiranger/newimage.png" title="WiFi Ranger Screen 1" data-gallery="portfolio-gallery-wifiranger" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/mobileapps/wifiranger/image2.png" title="WiFi Ranger Screen 2" data-gallery="portfolio-gallery-wifiranger" class="glightbox" style="display:none;"></a>
+                  <a href="portfolio-details.html?project=wifiranger" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -310,9 +311,9 @@
                 <img src="assets/img/mobileapps/expenses/Group 2.png" class="img-fluid" alt="Clear Expense Tracker" loading="lazy">
                 <div class="portfolio-info">
                   <h4>Clear Expense Tracker</h4>
-                  <p>Mobile app for managing and tracking personal expenses</p>
+                  <p>Cross-platform Flutter app (iOS/Android) for expense tracking</p>
                   <a href="assets/img/mobileapps/expenses/Group 2.png" title="Clear Expense Tracker" data-gallery="portfolio-gallery-expenses" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html?project=expenses" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -322,9 +323,9 @@
                 <img src="assets/img/mobileapps/dreamsafe/Group 2.png" class="img-fluid" alt="DreamSafe Application" loading="lazy">
                 <div class="portfolio-info">
                   <h4>DreamSafe</h4>
-                  <p>Mobile application for secure dream journaling and tracking</p>
+                  <p>Full-stack: Flutter app with psychologist chat, AI counseling, Django backend</p>
                   <a href="assets/img/mobileapps/dreamsafe/Group 2.png" title="DreamSafe" data-gallery="portfolio-gallery-dreamsafe" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html?project=dreamsafe" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -334,9 +335,9 @@
                 <img src="assets/img/mobileapps/todoapp/Group 2.png" class="img-fluid" alt="Todo Task Manager" loading="lazy">
                 <div class="portfolio-info">
                   <h4>Todo Task Manager</h4>
-                  <p>Mobile app for managing and organizing your daily tasks</p>
+                  <p>Cross-platform Flutter app (iOS/Android) for task management</p>
                   <a href="assets/img/mobileapps/todoapp/Group 2.png" title="Todo Task Manager" data-gallery="portfolio-gallery-todoapp" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html?project=todo" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -346,9 +347,9 @@
                 <img src="assets/img/mobileapps/weather/newimage.png" class="img-fluid" alt="Weather Route Tracker" loading="lazy">
                 <div class="portfolio-info">
                   <h4>Weather Route Tracker</h4>
-                  <p>Track weather conditions across your route destinations</p>
+                  <p>Cross-platform Flutter app (iOS/Android) for weather routing</p>
                   <a href="assets/img/mobileapps/weather/newimage.png" title="Weather Route Tracker" data-gallery="portfolio-gallery-weather" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <a href="portfolio-details.html?project=weather" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -358,33 +359,23 @@
                 <img src="assets/img/projects/newvr.png" class="img-fluid" alt="VR Project" loading="lazy">
                 <div class="portfolio-info">
                   <h4>VR Experience Project</h4>
-                  <p>Virtual reality application and immersive experiences</p>
-                  <a href="assets/img/projects/newvr.png" title="VR Project" data-gallery="portfolio-gallery-projects" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="#" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                  <p>Immersive VR application built with Unity and C#</p>
+                  <a href="assets/img/projects/newvr.png" title="VR Project Screen 1" data-gallery="portfolio-gallery-vr" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/projects/vr.png" title="VR Project Screen 2" data-gallery="portfolio-gallery-vr" class="glightbox" style="display:none;"></a>
+                  <a href="portfolio-details.html?project=vr" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-backend">
               <div class="portfolio-content h-100">
-                <img src="assets/img/dashboards/dashboard1.png" class="img-fluid" alt="Parking Spot Dashboard" loading="lazy">
+                <img src="assets/img/dashboards/dashboard1.png" class="img-fluid" alt="Parking Analytics Dashboard" loading="lazy">
                 <div class="portfolio-info">
-                  <h4>Parking Spot Dashboard</h4>
-                  <p>Angular admin dashboard with Spring Boot backend & AWS</p>
-                  <a href="assets/img/dashboards/dashboard1.png" title="Parking Spot Dashboard" data-gallery="portfolio-gallery-dashboards" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://github.com/Insterstellar/ParkingSpotDashboard" title="GitHub Repository" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-backend">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/dashboards/dashtwo.png" class="img-fluid" alt="Parking Dashboard Analytics" loading="lazy">
-                <div class="portfolio-info">
-                  <h4>Dashboard Analytics</h4>
-                  <p>Real-time analytics and reporting dashboard</p>
-                  <a href="assets/img/dashboards/dashtwo.png" title="Dashboard Analytics" data-gallery="portfolio-gallery-dashboards" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://github.com/Insterstellar/ParkingSpotDashboard" title="GitHub Repository" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                  <h4>Parking Analytics Dashboard</h4>
+                  <p>Angular dashboard with Java Spring Boot & MySQL</p>
+                  <a href="assets/img/dashboards/dashboard1.png" title="Parking Analytics Dashboard Screen 1" data-gallery="portfolio-gallery-dashboard1" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/dashboards/dashtwo.png" title="Parking Analytics Dashboard Screen 2" data-gallery="portfolio-gallery-dashboard1" class="glightbox" style="display:none;"></a>
+                  <a href="portfolio-details.html?project=dashboard1" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
