--- a/portfolio-details-wifiranger.html
+++ b/portfolio-details-wifiranger.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - Ronald Monday</title>
-  <meta content="Portfolio project details" name="description">
-  <meta content="" name="keywords">
+  <title>WiFi Distance Catcher - Portfolio Details</title>
+  <meta content="WiFi Distance Catcher - Android tool for measuring distance to WiFi sources" name="description">
+  <meta content="WiFi Ranger, WiFi Distance, Android App, Network Tools" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/icon.png" rel="icon">
@@ -64,11 +64,11 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0" id="project-title">Portfolio Details</h1>
+        <h1 class="mb-2 mb-lg-0">WiFi Distance Catcher</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Portfolio Details</li>
+            <li class="current">WiFi Distance Catcher Details</li>
           </ol>
         </nav>
       </div>
@@ -100,8 +100,16 @@
                 }
               </script>
 
-              <div class="swiper-wrapper align-items-center" id="image-slider">
-                <!-- Images will be loaded dynamically -->
+              <div class="swiper-wrapper align-items-center">
+
+                <div class="swiper-slide">
+                  <img src="assets/img/mobileapps/wifiranger/newimage.png" alt="WiFi Distance Catcher Screenshot 1">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/mobileapps/wifiranger/image2.png" alt="WiFi Distance Catcher Screenshot 2">
+                </div>
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -110,15 +118,23 @@
           <div class="col-lg-4">
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project Information</h3>
-              <ul id="project-info">
-                <!-- Project info will be loaded dynamically -->
+              <ul>
+                <li><strong>Category</strong>: Mobile Application</li>
+                <li><strong>Platform</strong>: Android</li>
+                <li><strong>Technology</strong>: Java, Android SDK</li>
+                <li><strong>Project date</strong>: January 2023</li>
+                <li><strong>Project URL</strong>: <a href="https://groups.google.com/g/wifiranger" target="_blank">WiFi Ranger</a></li>
+                <li><strong>GitHub</strong>: <a href="https://github.com/Insterstellar/wifidistancecatcher" target="_blank">View Repository</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2 id="about-title">About This Project</h2>
-              <div id="project-description">
-                <!-- Description will be loaded dynamically -->
-              </div>
+              <h2>About WiFi Distance Catcher</h2>
+              <p>
+                WiFi Distance Catcher is a powerful Android application designed to help users accurately measure the distance to WiFi sources. This innovative tool is perfect for troubleshooting connection issues, optimizing router placement, and understanding WiFi signal strength in different locations.
+              </p>
+              <p>
+                The app provides real-time signal strength measurements and calculates approximate distances using advanced algorithms. It helps users identify the best locations for their devices and routers to achieve optimal WiFi connectivity.
+              </p>
             </div>
           </div>
 
@@ -127,22 +143,34 @@
         <div class="row gy-4 mt-5">
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
             <h3>Key Features</h3>
-            <ul id="key-features">
-              <!-- Features will be loaded dynamically -->
+            <ul>
+              <li><strong>Real-time Distance Measurement:</strong> Accurately calculate the distance to WiFi sources in real-time</li>
+              <li><strong>Signal Strength Analysis:</strong> Monitor WiFi signal strength with detailed metrics</li>
+              <li><strong>Network Information:</strong> View comprehensive details about available WiFi networks</li>
+              <li><strong>Troubleshooting Tool:</strong> Identify connectivity issues and optimize router placement</li>
+              <li><strong>User-Friendly Interface:</strong> Simple and intuitive design for easy navigation</li>
+              <li><strong>Free & Open Source:</strong> Available for free with source code on GitHub</li>
             </ul>
           </div>
 
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
             <h3>Technical Details</h3>
-            <div id="technical-details">
-              <!-- Technical details will be loaded dynamically -->
-            </div>
+            <p>
+              Built using Java and the Android SDK, WiFi Distance Catcher leverages Android's WiFi management APIs to gather signal strength data. The app uses advanced mathematical formulas to estimate distance based on signal strength (RSSI), frequency, and environmental factors.
+            </p>
+            <p>
+              The application is optimized for performance and battery efficiency, ensuring smooth operation without draining device resources. It supports Android 5.0 (Lollipop) and above, making it compatible with a wide range of devices.
+            </p>
           </div>
 
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300" id="use-cases-section">
+          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="300">
             <h3>Use Cases</h3>
-            <ul id="use-cases">
-              <!-- Use cases will be loaded dynamically -->
+            <ul>
+              <li>Find the optimal location for your WiFi router</li>
+              <li>Troubleshoot weak signal areas in your home or office</li>
+              <li>Compare signal strength at different locations</li>
+              <li>Network administrators can use it for site surveys</li>
+              <li>Educational purposes to understand WiFi technology</li>
             </ul>
           </div>
         </div>
@@ -183,9 +211,6 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
-  
-  <!-- Portfolio Details Dynamic Content -->
-  <script src="assets/js/portfolio-details.js"></script>
 
 </body>
 
