--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <img src="assets/img/profilepic.png" class="img-fluid" alt="Ronald Monday">
           </div>
           <div class="col-lg-8 content">
-            <h2>Senior Flutter &amp; Full Stack Developer</h2>
+            <h2>Full Stack Developer</h2>
             <p class="fst-italic py-3">
               Specialized in Flutter/Dart for cross-platform mobile development, Java Spring Boot backend systems, and cloud architecture. I build scalable, secure applications with focus on excellent user experience.
             </p>
