--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
+                <img src="assets/img/mobileapps/hse/hse1.png" class="img-fluid" alt="HSE Incident Reporter" loading="lazy">
+                <div class="portfolio-info">
+                  <h4>HSE Incident Reporter</h4>
+                  <p>Full-stack: Flutter (iOS/Android) offline-first app, Java Spring Boot & MySQL</p>
+                  <a href="assets/img/mobileapps/hse/hse1.png" title="HSE App Screen 1" data-gallery="portfolio-gallery-hse" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/mobileapps/hse/hse2.png" title="HSE App Screen 2" data-gallery="portfolio-gallery-hse" class="glightbox" style="display:none;"></a>
+                  <a href="portfolio-details.html?project=hse" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
                 <img src="assets/img/mobileapps/parkingspot/parking.png" class="img-fluid" alt="Parking Spot App" loading="lazy">
                 <div class="portfolio-info">
                   <h4>Parking Spot App</h4>
