--- a/index.html
+++ b/index.html
@@ -289,6 +289,7 @@
                   <p>Full-stack: Flutter (iOS/Android) offline-first app, Java Spring Boot & MySQL</p>
                   <a href="assets/img/mobileapps/hse/hse1.png" title="HSE App Screen 1" data-gallery="portfolio-gallery-hse" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="assets/img/mobileapps/hse/hse2.png" title="HSE App Screen 2" data-gallery="portfolio-gallery-hse" class="glightbox" style="display:none;"></a>
+                  <a href="assets/img/mobileapps/hse/hse3.png" title="HSE App Screen 3" data-gallery="portfolio-gallery-hse" class="glightbox" style="display:none;"></a>
                   <a href="portfolio-details.html?project=hse" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
