--- a/index.html
+++ b/index.html
@@ -283,13 +283,13 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/mobileapps/hse/hse1.png" class="img-fluid" alt="HSE Incident Reporter" loading="lazy">
+                <img src="assets/img/mobileapps/hse/hse1.png" class="img-fluid" alt="ECOVIGIL HSE Incident Reporter" loading="lazy">
                 <div class="portfolio-info">
-                  <h4>HSE Incident Reporter</h4>
+                  <h4>ECOVIGIL - HSE Incident Reporter</h4>
                   <p>Full-stack: Flutter (iOS/Android) offline-first app, Java Spring Boot & MySQL</p>
-                  <a href="assets/img/mobileapps/hse/hse1.png" title="HSE App Screen 1" data-gallery="portfolio-gallery-hse" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/img/mobileapps/hse/hse2.png" title="HSE App Screen 2" data-gallery="portfolio-gallery-hse" class="glightbox" style="display:none;"></a>
-                  <a href="assets/img/mobileapps/hse/hse3.png" title="HSE App Screen 3" data-gallery="portfolio-gallery-hse" class="glightbox" style="display:none;"></a>
+                  <a href="assets/img/mobileapps/hse/hse1.png" title="ECOVIGIL App Screen 1" data-gallery="portfolio-gallery-hse" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/mobileapps/hse/hse2.png" title="ECOVIGIL App Screen 2" data-gallery="portfolio-gallery-hse" class="glightbox" style="display:none;"></a>
+                  <a href="assets/img/mobileapps/hse/hse3.png" title="ECOVIGIL App Screen 3" data-gallery="portfolio-gallery-hse" class="glightbox" style="display:none;"></a>
                   <a href="portfolio-details.html?project=hse" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -321,14 +321,30 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-backend">
+              <div class="portfolio-content h-100">
+                <img src="assets/img/dashboards/hse/hse1.png" class="img-fluid" alt="ECOVIGIL HSE Management Dashboard" loading="lazy">
+                <div class="portfolio-info">
+                  <h4>ECOVIGIL - HSE Management Dashboard</h4>
+                  <p>Bootstrap 5.3.3 & Vanilla JS with ApexCharts for HSE analytics</p>
+                  <a href="assets/img/dashboards/hse/hse1.png" title="ECOVIGIL Dashboard Screen 1" data-gallery="portfolio-gallery-hsedashboard" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/dashboards/hse/hse2.png" title="ECOVIGIL Dashboard Screen 2" data-gallery="portfolio-gallery-hsedashboard" class="glightbox" style="display:none;"></a>
+                  <a href="assets/img/dashboards/hse/hse3.png" title="ECOVIGIL Dashboard Screen 3" data-gallery="portfolio-gallery-hsedashboard" class="glightbox" style="display:none;"></a>
+                  <a href="assets/img/dashboards/hse/hse4.png" title="ECOVIGIL Dashboard Screen 4" data-gallery="portfolio-gallery-hsedashboard" class="glightbox" style="display:none;"></a>
+                  <a href="assets/img/dashboards/hse/hse5.png" title="ECOVIGIL Dashboard Screen 5" data-gallery="portfolio-gallery-hsedashboard" class="glightbox" style="display:none;"></a>
+                  <a href="portfolio-details.html?project=hsedashboard" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="assets/img/mobileapps/wifiranger/newimage.png" class="img-fluid" alt="WiFi Ranger Application" loading="lazy">
+                <img src="assets/img/mobileapps/wifiranger/newimage.png" class="img-fluid" alt="Wifi Ranger Application" loading="lazy">
                 <div class="portfolio-info">
-                  <h4>WiFi Distance Catcher</h4>
+                  <h4>Wifi Ranger</h4>
                   <p>Cross-platform: Flutter & Java for iOS/Android WiFi analysis</p>
-                  <a href="assets/img/mobileapps/wifiranger/newimage.png" title="WiFi Ranger Screen 1" data-gallery="portfolio-gallery-wifiranger" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/img/mobileapps/wifiranger/image2.png" title="WiFi Ranger Screen 2" data-gallery="portfolio-gallery-wifiranger" class="glightbox" style="display:none;"></a>
+                  <a href="assets/img/mobileapps/wifiranger/newimage.png" title="Wifi Ranger Screen 1" data-gallery="portfolio-gallery-wifiranger" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/mobileapps/wifiranger/image2.png" title="Wifi Ranger Screen 2" data-gallery="portfolio-gallery-wifiranger" class="glightbox" style="display:none;"></a>
                   <a href="portfolio-details.html?project=wifiranger" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -400,7 +416,7 @@
                 <img src="assets/img/dashboards/dashboard1.png" class="img-fluid" alt="Parking Analytics Dashboard" loading="lazy">
                 <div class="portfolio-info">
                   <h4>Parking Analytics Dashboard</h4>
-                  <p>Angular dashboard with Java Spring Boot & MySQL</p>
+                  <p>Bootstrap 5.3.3 & Vanilla JS with ApexCharts, Gulp & BrowserSync</p>
                   <a href="assets/img/dashboards/dashboard1.png" title="Parking Analytics Dashboard Screen 1" data-gallery="portfolio-gallery-dashboard1" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="assets/img/dashboards/dashtwo.png" title="Parking Analytics Dashboard Screen 2" data-gallery="portfolio-gallery-dashboard1" class="glightbox" style="display:none;"></a>
                   <a href="portfolio-details.html?project=dashboard1" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
