--- a/portfolio-details-wifiranger.html
+++ b/portfolio-details-wifiranger.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>WiFi Distance Catcher - Portfolio Details</title>
-  <meta content="WiFi Distance Catcher - Android tool for measuring distance to WiFi sources" name="description">
+  <title>Wifi Ranger - Portfolio Details</title>
+  <meta content="Wifi Ranger - Android tool for measuring distance to WiFi sources" name="description">
   <meta content="WiFi Ranger, WiFi Distance, Android App, Network Tools" name="keywords">
 
   <!-- Favicons -->
@@ -64,11 +64,11 @@
     <!-- Page Title -->
     <div class="page-title dark-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">WiFi Distance Catcher</h1>
+        <h1 class="mb-2 mb-lg-0">Wifi Ranger</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">WiFi Distance Catcher Details</li>
+            <li class="current">Wifi Ranger Details</li>
           </ol>
         </nav>
       </div>
@@ -103,11 +103,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/mobileapps/wifiranger/newimage.png" alt="WiFi Distance Catcher Screenshot 1">
+                  <img src="assets/img/mobileapps/wifiranger/newimage.png" alt="Wifi Ranger Screenshot 1">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/mobileapps/wifiranger/image2.png" alt="WiFi Distance Catcher Screenshot 2">
+                  <img src="assets/img/mobileapps/wifiranger/image2.png" alt="Wifi Ranger Screenshot 2">
                 </div>
 
               </div>
@@ -123,14 +123,14 @@
                 <li><strong>Platform</strong>: Android</li>
                 <li><strong>Technology</strong>: Java, Android SDK</li>
                 <li><strong>Project date</strong>: January 2023</li>
-                <li><strong>Project URL</strong>: <a href="https://groups.google.com/g/wifiranger" target="_blank">WiFi Ranger</a></li>
+                <li><strong>Project URL</strong>: <a href="https://play.google.com/store/apps/details?id=com.wificatcher.wifi_distance_catcher&pli=1" target="_blank">Wifi Ranger on Google Play</a></li>
                 <li><strong>GitHub</strong>: <a href="https://github.com/Insterstellar/wifidistancecatcher" target="_blank">View Repository</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>About WiFi Distance Catcher</h2>
+              <h2>About Wifi Ranger</h2>
               <p>
-                WiFi Distance Catcher is a powerful Android application designed to help users accurately measure the distance to WiFi sources. This innovative tool is perfect for troubleshooting connection issues, optimizing router placement, and understanding WiFi signal strength in different locations.
+                Wifi Ranger is a powerful Android application designed to help users accurately measure the distance to WiFi sources. This innovative tool is perfect for troubleshooting connection issues, optimizing router placement, and understanding WiFi signal strength in different locations.
               </p>
               <p>
                 The app provides real-time signal strength measurements and calculates approximate distances using advanced algorithms. It helps users identify the best locations for their devices and routers to achieve optimal WiFi connectivity.
@@ -156,7 +156,7 @@
           <div class="col-lg-12" data-aos="fade-up" data-aos-delay="200">
             <h3>Technical Details</h3>
             <p>
-              Built using Java and the Android SDK, WiFi Distance Catcher leverages Android's WiFi management APIs to gather signal strength data. The app uses advanced mathematical formulas to estimate distance based on signal strength (RSSI), frequency, and environmental factors.
+              Built using Java and the Android SDK, Wifi Ranger leverages Android's WiFi management APIs to gather signal strength data. The app uses advanced mathematical formulas to estimate distance based on signal strength (RSSI), frequency, and environmental factors.
             </p>
             <p>
               The application is optimized for performance and battery efficiency, ensuring smooth operation without draining device resources. It supports Android 5.0 (Lollipop) and above, making it compatible with a wide range of devices.
